# aoc2020

./: .gitignore  Cargo.toml  README.md
problems/: Cargo.toml
problems/src/: main.rs
problems/src/problem1/: mod.rs
problems/src/problem10/: mod.rs
problems/src/problem11/: mod.rs
problems/src/problem12/: mod.rs
problems/src/problem13/: mod.rs
problems/src/problem14/: mod.rs
problems/src/problem15/: mod.rs
problems/src/problem16/: mod.rs
problems/src/problem17/: mod.rs  point3d.rs  point4d.rs  point_trait.rs
problems/src/problem18/: mod.rs
problems/src/problem19/: mod.rs
problems/src/problem2/: mod.rs
problems/src/problem3/: mod.rs
problems/src/problem4/: mod.rs
problems/src/problem5/: mod.rs
problems/src/problem6/: mod.rs
problems/src/problem7/: mod.rs
problems/src/problem8/: mod.rs
problems/src/problem9/: mod.rs
utils/: Cargo.toml
utils/src/: groups_iter.rs  lib.rs  ret_types.rs
