[package]
name = "problems"
version = "0.1.0"
authors = ["risboo6909 <ttyv00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7"
colored = "1.8"
failure = "0.1.6"
itertools = "0.8.2"
permutohedron = "0.2.4"
image = "0.23.0-preview.0"
rand = "0.7.2"
num-integer = "0.1"
num_cpus = "1.0"
utils = { path = "../utils" }
